; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_get_property_native.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_get_property_native.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MPV_FORMAT_NODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @script_get_property_native to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @script_get_property_native(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i8* @js_tostring(i32* %9, i32 1)
  store i8* %10, i8** %5, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32* @jclient(i32* %11)
  store i32* %12, i32** %6, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32* @new_af_mpv_node(i8* %13)
  store i32* %14, i32** %7, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* @MPV_FORMAT_NODE, align 4
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @mpv_get_property(i32* %15, i8* %16, i32 %17, i32* %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32*, i32** %3, align 8
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @pushed_error(i32* %20, i32 %21, i32 2)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %28, label %24

24:                                               ; preds = %2
  %25 = load i32*, i32** %3, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @pushnode(i32* %25, i32* %26)
  br label %28

28:                                               ; preds = %24, %2
  ret void
}

declare dso_local i8* @js_tostring(i32*, i32) #1

declare dso_local i32* @jclient(i32*) #1

declare dso_local i32* @new_af_mpv_node(i8*) #1

declare dso_local i32 @mpv_get_property(i32*, i8*, i32, i32*) #1

declare dso_local i32 @pushed_error(i32*, i32, i32) #1

declare dso_local i32 @pushnode(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
